BB-2907 Update openapi and regenerate
