# src/Generated/Exception/TestShopRegisterInternalServerErrorException.php
@@ -1,0 +1,20 @@
+<?php
+
+namespace Datenkraft\Backbone\Client\FulfillmentShopifyService\Generated\Exception;
+
+class TestShopRegisterInternalServerErrorException extends InternalServerErrorException
+{
+    /**
+     * @var \Datenkraft\Backbone\Client\FulfillmentShopifyService\Generated\Model\ErrorResponse
+     */
+    private $errorResponse;
+    public function __construct(\Datenkraft\Backbone\Client\FulfillmentShopifyService\Generated\Model\ErrorResponse $errorResponse)
+    {
+        parent::__construct('Server error');
+        $this->errorResponse = $errorResponse;
+    }
+    public function getErrorResponse() : \Datenkraft\Backbone\Client\FulfillmentShopifyService\Generated\Model\ErrorResponse
+    {
+        return $this->errorResponse;
+    }
+}
